main Site/style.css
/* ... */
@media (min-width: 992px) {
  #articles .categories .category .children .link-wrap {
    padding: 2px 15px 2px 30px;
  }
}

#articles .categories .category .children .category:first-child {
  padding-top: 15px;
}

#articles .categories .category .children .category:last-child {
  padding-bottom: 15px;
}
/* 
#footer .spacer {
  width: 95%;
  height: 1px;
  background: #e0e0e0;
  margin: 15px auto;
}

@media screen and (min-width: 1600px) {
  #footer .spacer {
    width: 90%;
  }
}

#footer .info {
  padding-bottom: 60px;
}

#footer .info-header {
  margin-bottom: 30px;
  height: 60px;
}

#footer .info-header .underline {
  width: 60px;
  height: 2px;
  background: #9147ff;
}

#footer .info-content {
  color: #fff;
}

#footer .info-content .text-item {
  padding-bottom: 10px;
}

#footer .info-content .text-item:hover a {
  color: #9147ff;
}

#footer .info .wrapper {
  margin-bottom: 15px;
}

#footer .footer {
  padding-bottom: 50px;
}

#footer .footer .links {
  padding-bottom: 15px;
}

#footer .footer .links a:first-child {
  padding-right: 15px;
}
#footer .footer .links a {
  color: #fff !important;
}

@media (min-width: 576px) {
  #footer .footer .links {
    padding-bottom: 0;
  }

  #footer .footer .links a:first-child {
    padding-right: 50px;
  }
}

#footer .footer .copyrights,
#footer .footer .copyrights a {
  color: #fff;
} */

.modal {
  background: rgba(0, 0, 0, 0.4);
}

.modal-dialog {
  height: 100%;
  width: 100%;
  max-width: 700px;
}

.modal-content {
  border: none;
  height: 100%;
  background: transparent;
  overflow: hidden;
}

.modal section {
  overflow: hidden auto;
  background: #fff;
  border-radius: 40px;
}

.modal .section-content {
  border-bottom: 1px solid #ced4da;
}

.modal .header {
  background: url(/images/bg-login.jpg) no-repeat top;
}

@media (min-width: 576px) {
  .modal .header {
    background-position: 0 0;
  }
}

.modal .footer,
.modal .logo {
  text-align: center;
}

.modal .logo {
  padding: 90px 0 105px;
}

.modal .footer {
  padding: 60px 0;
}

#account-panel {
  display: initial;
  height: calc(100% - 130px);
}

#account-panel ul {
  list-style: none;
}

#account-panel ul li .link {
  height: 100%;
  color: #fff !important;
  transition: all 0.25s ease;
}

#account-panel ul li.active,
#account-panel ul li:hover {
  background: #fff !important;
  transition: all 0.25s ease;
}

#account-panel ul li.active .link,
#account-panel ul li:hover .link {
  color: #fff;
}

#account-panel .no-gutters {
  height: 100%;
}

.box-message {
  position: fixed;
  right: 0;
  top: 120px;
  min-height: 50px;
  z-index: 1051;
}

.box-message ul {
  list-style: none;
}

.message-item {
  width: 300px;
  margin-bottom: 10px;
  color: #fff;
  padding: 10px 15px;
  border-top-left-radius: 5px;
  border-bottom-left-radius: 5px;
  display: flex;
  align-items: center;
}

.message-item--success {
  background-color: #38c172;
}

.message-item--error {
  background-color: #e3342f;
}

.message-item .message-icon {
  font-size: 22px;
  margin-right: 10px;
}

.message-item__text {
  font-size: 16px;
}

.message-item__title {
  font-size: 18px;
  margin-bottom: 5px;
}

canvas {
  display: block;
  width: 100%;
  height: 100%;
}
#bg {
  height: 550px;
  width: 100vw;
  overflow: hidden;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
}
#hero {
  height: 450px;
  margin-top: 100px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.logo a {
  color: #fff;
  font-size: 24px;
  font-weight: 600;
}
.hero-cta {
  height: 80px;
  width: 240px;
  font-size: 18px;
  border-radius: 20px;
  cursor: pointer;
  border: none;
  display: flex;
  justify-content: center;
  align-items: center;
  box-shadow:
    rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
    rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
    rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset,
    rgba(0, 0, 0, 0.06) 0px 2px 1px,
    rgba(0, 0, 0, 0.09) 0px 4px 2px,
    rgba(0, 0, 0, 0.09) 0px 8px 4px,
    rgba(0, 0, 0, 0.09) 0px 16px 8px,
    rgba(0, 0, 0, 0.09) 0px 32px 16px;
}
.hero-text {
  margin: 20px auto;
  font-size: 18px;
  max-width: 620px;
  text-align: center;
  width: 100%;
}
.hero-cta:hover {
  transition: scale 0.2s ease-in-out;
  scale: 1.05;
}
.hero-cta span {
  margin-left: 10px;
  display: inline-block;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  color: black;
}
.hero-title {
  font-weight: 600 !important;
  font-size: 42px;
}
form {
  min-width: 25rem;
}
form .form-control {
  background-color: transparent;
  border: 1px solid #e1e1e1 !important;
  border-radius: 20px !important;
  border: none;
}
form .form-control.thick {
  height: 3.3rem;
  padding: 20px;
}
form .form-control:focus {
  border: none;
  background-color: transparent !important;
}
form .message .form-control {
  padding: 20px;
}
form ::placeholder {
  font-size: 18px;
  color: #e1e1e1 !important;
  position: relative;
  left: 0;
}
form input,
form textarea {
  color: #212529;
}
/* jbfjabfbfjfb */
/* * {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --bg: #222;
  --clr: #fff;
}

body {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  background: var(--bg);
} */

ul {
  position: relative;
  display: flex;
  gap: 50px;
}

ul li {
  position: relative;
  list-style: none;
  width: 80px;
  height: 80px;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  transition: 0.5s;
}

ul li::before {
  content: "";
  position: absolute;
  inset: 30px;
  box-shadow:
    0 0 0 10px var(--clr),
    0 0 0 20px var(--bg),
    0 0 0 22px var(--clr);
  transition: 0.5s;
}

ul li:hover::before {
  inset: 15px;
}

ul li::after {
  content: "";
  position: absolute;
  inset: 0;
  background: var(--bg);
  transform: rotate(45deg);
  transition: 0.5s;
}

ul li:hover::after {
  inset: 0px;
  transform: rotate(0deg);
}
/* ... */

